Closed Bug 1278302 Opened 8 years ago Closed 8 years ago

New performance caveat branch doesn't have a failure id

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
firefox49 --- fixed
firefox50 --- fixed

People

(Reporter: BenWa, Unassigned)

References

Details

(Whiteboard: [gfx-noted])

Attachments

(1 file)

Looks like this patch was merged in and thus never got a failure id.
Comment on attachment 8760348 [details]
Bug 1278302 - Add failureid for WARP failIfMajorPerformanceCaveat.

https://reviewboard.mozilla.org/r/57948/#review54824
Attachment #8760348 - Flags: review?(jmuizelaar) → review+
Pushed by b56girard@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/7369ec85f9e5
Add failureid for WARP failIfMajorPerformanceCaveat. r=jrmuizel
Whiteboard: [gfx-noted]
https://hg.mozilla.org/mozilla-central/rev/7369ec85f9e5
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
Comment on attachment 8760348 [details]
Bug 1278302 - Add failureid for WARP failIfMajorPerformanceCaveat.

Approval Request Comment
[User impact if declined]: Some missing WebGL telemetry
[Describe test coverage new/current, TreeHerder]: None
[Risks and why]: Very low risk simple patch
Attachment #8760348 - Flags: approval-mozilla-aurora?
Comment on attachment 8760348 [details]
Bug 1278302 - Add failureid for WARP failIfMajorPerformanceCaveat.

This missed the merge, adds some missing telemetry. OK to uplift to aurora 49
Attachment #8760348 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: