Bug 1278302 - Add failureid for WARP failIfMajorPerformanceCaveat. r=jrmuizel, a=lizzard

MozReview-Commit-ID: 2Ieeaqp4Sgj